Bug 157285 - FILEOPEN PPTX: Textbox too tall - import needs to look at the shape on the slide instead of the master page
Summary: FILEOPEN PPTX: Textbox too tall - import needs to look at the shape on the sl...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:24.8.0
Keywords:
: 119617 (view as bug list)
Depends on:
Blocks: 157019
  Show dependency treegraph
 
Reported: 2023-09-17 04:27 UTC by Gerald Pfeifer
Modified: 2024-04-02 21:18 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2023-09-17 04:27:18 UTC
This is an additional issue around the document from bug #189264 .

1. Open the sample document - attachment #189264 [details].
2. Observe how the two rectangles which I marked with the words
   "Way Oversize" extend way too much horizontally compared to
   PowerPoint - visual comparision in attachment #189265 [details] .

Regina, in bug #157019, provided good background and analysis and
noted the following:

  "A text box does not have a property "Resize shape to fit text" 
  but only "Fit height to text". But that property does not shrink 
  the shape automatically, when its content is smaller than the 
  current size, but only expand height if the content would 
  overflow otherwise. Therefore the shapes are too large. Here 
  the import needs to look at the shape on the slide and use its 
  current size instead of using the size from the master page. I 
  don't know why the size is correct for the third object."


Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 642f2d7177ea3e6c365da2c2082a50a5137cd988
CPU threads: 8; OS: Linux 6.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US

...back all the way to at least

Version: 6.4.8.0.0+
Build ID: 99b065ec31d032fc08ab14f66430dac4fef904a5
CPU threads: 8; OS: Linux 6.4; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-6-4, Time: 2020-10-08_08:57:08
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Comment 1 Stéphane Guillou (stragu) 2023-09-29 21:44:44 UTC
Repro in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e9a0c97de95688b2f86bbb4dd8c823af5442401c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

As well as OOo 3.3, so inherited.
Comment 2 Commit Notification 2024-03-29 22:39:19 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/40d3d510fca99b555381deb74b9915c91c924de5

tdf#157285 PPTX import: fix placeholder height

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Gerald Pfeifer 2024-03-30 18:47:38 UTC
Very nice, just tested with today's nightly build

  Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 40d3d510fca99b555381deb74b9915c91c924de5
  CPU threads: 12; OS: Linux 6.8; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

and it's totally improved.


There is one minor detail: In the PowerPoint screenshot there is a bit
more space between the text at the bottom of the boxes "Way Oversize":
even between the lowest point of the letter "y" and the orange border
at the bottom there is a bit of space; in Impress the "y" now runs into
the border.

Is this just a font issue? Or is the box maybe a bit too short now?
Comment 4 Stéphane Guillou (stragu) 2024-04-02 05:53:38 UTC
(In reply to Gerald Pfeifer from comment #3)
> There is one minor detail: In the PowerPoint screenshot there is a bit
> more space between the text at the bottom of the boxes "Way Oversize":
> even between the lowest point of the letter "y" and the orange border
> at the bottom there is a bit of space; in Impress the "y" now runs into
> the border.
> 
> Is this just a font issue? Or is the box maybe a bit too short now?
I see the same issue, even with the Poppins Light font installed. Seems LO calculates the height to fit text in a different way:
- 2.52 cm in LO
- 2.77 cm in MSO

Tibor, what do you think?
Comment 5 Gabor Kelemen (Collabora) 2024-04-02 10:13:31 UTC
Checked in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c9d4f99b2bb54ac7735b3e0d0cadbafbd0279518
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: default

Now the text boxes are not oversized. Similar to bug 119617 whose example file now looks good as well.

Unfortunately this does not survive save as PPTX: after opening I can type more words into these boxes and they grow (just like in PP), but after a save and reload the file loses this ability.
Maybe good for a followup bug.
Comment 6 Gabor Kelemen (Collabora) 2024-04-02 14:12:45 UTC
(In reply to Stéphane Guillou (stragu) from comment #4)
> (In reply to Gerald Pfeifer from comment #3)
> > There is one minor detail: In the PowerPoint screenshot there is a bit
> > more space between the text at the bottom of the boxes "Way Oversize":
> > even between the lowest point of the letter "y" and the orange border
> > at the bottom there is a bit of space; in Impress the "y" now runs into
> > the border.
> > 
> > Is this just a font issue? Or is the box maybe a bit too short now?
> I see the same issue, even with the Poppins Light font installed. Seems LO
> calculates the height to fit text in a different way:
> - 2.52 cm in LO
> - 2.77 cm in MSO
> 
> Tibor, what do you think?

To me this seems to have something to do with the border line width which is 4.5 pt or 0.15 cm in this case.
If I set a 10 pt or 0.35 cm width, the difference becomes close to 0.5 cm. Not the same, but almost. I'll file a separate one for this.
Comment 7 Gabor Kelemen (Collabora) 2024-04-02 16:36:28 UTC
*** Bug 119617 has been marked as a duplicate of this bug. ***
Comment 8 Gerald Pfeifer 2024-04-02 17:30:02 UTC
(In reply to Gabor Kelemen (allotropia) from comment #5)
> Unfortunately this does not survive save as PPTX: after opening I can type
> more words into these boxes and they grow (just like in PP), but after a
> save and reload the file loses this ability.
> Maybe good for a followup bug.

Thank you for bug filing bug #160487 as this follow up, Gabor!
Comment 9 Gerald Pfeifer 2024-04-02 21:18:39 UTC
Happy to verify with

  Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 40d3d510fca99b555381deb74b9915c91c924de5
  CPU threads: 12; OS: Linux 6.8; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US
 
There is some follow-up in bug #160490 regarding comment #3 and
comment #4 here, but the fundamental issue has been addressed. Thanks!