tdf#157285 PPTX import: fix placeholder height

The "TextAutoGrowHeight" property doesn't shrink the shape automatically
when its content is smaller than the current size.

Change-Id: Ia7f94d7452d1a1c3f004aebd73b6ed5cbfd9b43b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165551
Tested-by: Jenkins
Reviewed-by: Nagy Tibor <tibor.nagy.extern@allotropia.de>