sd/qa/unit/import-tests2.cxx
@@ -74,6 +74,29 @@ protected:
     bool checkPattern(int nShapeNumber, std::vector<sal_uInt8>& rExpected);
 };
 
+CPPUNIT_TEST_FIXTURE(SdImportTest2, testTdf157285)
+{
+    createSdImpressDoc("pptx/tdf157285.pptx");
+
+    uno::Reference<drawing::XShape> xShape1(getShapeFromPage(0, 0), uno::UNO_QUERY);
+    CPPUNIT_ASSERT(xShape1.is());
+    sal_Int32 nHeight1 = xShape1->getSize().Height;
+
+    // Without the fix in place, this test would have failed with
+    // Expected: placeholder height: 2541
+    // Actual  : placeholder height: 3435
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(2541), nHeight1);
+
+    uno::Reference<drawing::XShape> xShape2(getShapeFromPage(1, 0), uno::UNO_QUERY);
+    CPPUNIT_ASSERT(xShape2.is());
+    sal_Int32 nHeight2 = xShape2->getSize().Height;
+
+    // Without the fix in place, this test would have failed with
+    // Expected: placeholder height: 1169
+    // Actual  : placeholder height: 11303
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(1169), nHeight2);
+}
+
 CPPUNIT_TEST_FIXTURE(SdImportTest2, testTdf152186)
 {
     createSdImpressDoc("pptx/tdf152186.pptx");
